--- a/.github/workflows/current.yaml
+++ b/.github/workflows/current.yaml
@@ -7,6 +7,8 @@ jobs:
     permissions:
       contents: read
       deployments: read
+    env:
+      ENV_NAME: ${{ matrix.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
