--- a/.github/workflows/current.yaml
+++ b/.github/workflows/current.yaml
@@ -9,14 +9,14 @@ jobs:
       deployments: read
     environment:
       name: ${{ matrix.environment }}
+    concurrency:
+      group: ${{ matrix.environment }}-deploy
+      cancel-in-progress: false
     env:
       ENV_NAME: ${{ matrix.environment }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.sha }}
-          fetch-depth: 0
+      - name: Echo
+        run: echo "Deploying to $ENV_NAME"
     strategy:
       max-parallel: 1
       matrix:
